# openai_sdk_guide

./: .env.example  README.md  main.py  pyproject.toml
01_Basic_setup/: 01_basic_agent.py  02_streaming.py  03_quize_agent.py  README.md
02_Running_Agents/: README.md
02_Tools/: 01_function_tools.py  04_AI_terminal.py
03_context/: 1_local_context.py  2_context_via_instructions.py  3_context_via_tool_call.py  4_context_via_web_search.py  README.md
04_handoffs/: 01_basic_usage.py  02_custom_handoff.py  README.md
05_tracing/: README.md
Tools_openai/: 03_shopping_CRUD_agent.py  README.md
